Bug 261882 Import & Export to/from text files (CSV,TAB) fails to include "Screenname" field. r=Standard8,sr=dmose