mailnews/import/src/nsImportStringBundle.h
@@ -71,7 +71,7 @@ public:
 #define IMPORT_ERROR_MB_NODESTFOLDER            2010
 
 #define IMPORT_FIELD_DESC_START                2100
-#define IMPORT_FIELD_DESC_END                2135
+#define IMPORT_FIELD_DESC_END                2136
 
 
 #endif /* _nsImportStringBundle_H__ */
