mailnews/mailnews.js
@@ -817,3 +817,6 @@ pref("mailnews.database.global.logging.console", false);
 pref("mailnews.database.global.logging.dump", false);
 // Should we consider outputting all levels via the network?
 pref("mailnews.database.global.logging.net", false);
+
+// default field order in the fieldmap
+pref("mailnews.import.text.fieldmap", "+0,+1,+2,+3,+4,+5,+36,+6,+7,+8,+9,+10,+11,+12,+13,+14,+15,+16,+17,+18,+19,+20,+21,+22,+23,+24,+25,+26,+27,+28,+29,+30,+31,+32,+33,+34,+35");
